# opencv-vscode-msys2-cmake

./: CMakeLists.txt  Makefile  README.md  main.cpp
